--- a/game/data/html/classmaster/template.htm
+++ b/game/data/html/classmaster/template.htm
@@ -1,10 +1,24 @@
-<html><body>Class Manager:<br>
-<font color="LEVEL">Possible class change(s):</font><br>
+<html><body>
 <center>
-%menu%
-</center><br>
-<font color="LEVEL">Item(s) required for class change:</font>
-<table width=270>
-%req_items%
+<img src="l2font-e.replay_logo-e" width=250 height=70>
+<img src="L2UI.SquareGray" width=295 height=1>
+<br>
+<img src="L2UI.SquareGray" width=295 height=1>
+<table bgcolor=000000 width=300>
+	<tr>
+		<td><center><font color="FFFFFF">%name% </font>Class Master:</center></td>
+	</tr>
 </table>
-</body></html>
+<img src="L2UI.SquareGray" width=295 height=1>
+<br>
+		%menu%
+<br>
+<img src="L2UI.SquareGray" width=295 height=1>
+<table bgcolor=000000 width=300>
+	<tr>
+		<td><center><font color="FFFFFF">Lineage ][ Interlude</font></center></td>
+	</tr>
+</table>
+<img src="L2UI.SquareGray" width=295 height=1>
+	</body>
+</html>
