Add * New System DressMe
feito um dressme completo

--- a/game/data/html/mods/menu/Menu.htm
+++ b/game/data/html/mods/menu/Menu.htm
@@ -126,7 +126,7 @@
 </table></center>
 <center><table align=center>
 	<tr>
-		                             <td><button value="Armor Skins" action="bypass voiced_skin" width=95 height=21 back="L2UI_ch3.Bigbutton_down" fore="L2UI_ch3.Bigbutton"></td>
+		                             <td><button value="Armor Skins" action="bypass -h dressme skin" width=95 height=21 back="L2UI_ch3.Bigbutton_down" fore="L2UI_ch3.Bigbutton"></td>
 		                             <td><button value="Auto Farm" action="bypass voiced_autofarm" width=95 height=21 back="L2UI_ch3.Bigbutton_down" fore="L2UI_ch3.Bigbutton"></td>
 		                             <td><button value="Mission" action="bypass voiced_mission" width=95 height=21 back="L2UI_ch3.Bigbutton_down" fore="L2UI_ch3.Bigbutton"></td>
 	</tr>
