--- a/game/data/html/mods/menu/tryskin.htm
+++ b/game/data/html/mods/menu/tryskin.htm
@@ -31,51 +31,51 @@
 <br>
 <table width=150>
 <tr>
-<td><button width=32 height=32 action="bypass voiced_trySkin 6392" fore="Skins.archer_f" back="icon.skill0000"></td>
-<td><button width=32 height=32 action="bypass voiced_trySkin 6393" fore="Skins.archer2_f" back="icon.skill0000"></td>
-<td><button width=32 height=32 action="bypass voiced_trySkin 5556" fore="Skins.Light_f" back="icon.skill0000"></td>
-<td><button width=32 height=32 action="bypass voiced_trySkin 4" fore="Skins.dark_f" back="icon.skill0000"></td>
+<td><button width=32 height=32 action="bypass -h dressme action 9100" fore="Skins.archer_f" back="icon.skill0000"></td>
+<td><button width=32 height=32 action="bypass -h dressme action 9102" fore="Skins.archer2_f" back="icon.skill0000"></td>
+<td><button width=32 height=32 action="bypass -h dressme action 9103" fore="Skins.Light_f" back="icon.skill0000"></td>
+<td><button width=32 height=32 action="bypass -h dressme action 9104" fore="Skins.dark_f" back="icon.skill0000"></td>
 
-<td><button width=32 height=32 action="bypass voiced_trySkin 5" fore="Skins.muskeeter2_f" back="icon.skill0000"></td>
-<td><button width=32 height=32 action="bypass voiced_trySkin 6" fore="Skins.muskeeter_f" back="icon.skill0000"></td>
-<td><button width=32 height=32 action="bypass voiced_trySkin 7" fore="Skins.wizard2_f" back="icon.skill0000"></td>
-<td><button width=32 height=32 action="bypass voiced_trySkin 8" fore="Skins.warrior_f" back="icon.skill0000"></td>
+<td><button width=32 height=32 action="bypass -h dressme action 9105" fore="Skins.muskeeter2_f" back="icon.skill0000"></td>
+<td><button width=32 height=32 action="bypass -h dressme action 9106" fore="Skins.muskeeter_f" back="icon.skill0000"></td>
+<td><button width=32 height=32 action="bypass -h dressme action 9107" fore="Skins.wizard2_f" back="icon.skill0000"></td>
+<td><button width=32 height=32 action="bypass -h dressme action 9108" fore="Skins.warrior_f" back="icon.skill0000"></td>
 <tr>
 </table>
 <table width=150>
 <tr>
 
-<td><button width=32 height=32 action="bypass voiced_trySkin 9" fore="Skins.cat_f" back="icon.skill0000"></td>
-<td><button width=32 height=32 action="bypass voiced_trySkin 10" fore="Skins.rei_f" back="icon.skill0000"></td>
-<td><button width=32 height=32 action="bypass voiced_trySkin 11" fore="Skins.rei2_f" back="icon.skill0000"></td>
-<td><button width=32 height=32 action="bypass voiced_trySkin 12" fore="Skins.valkyri_f" back="icon.skill0000"></td>
+<td><button width=32 height=32 action="bypass -h dressme action 9109" fore="Skins.cat_f" back="icon.skill0000"></td>
+<td><button width=32 height=32 action="bypass -h dressme action 9110" fore="Skins.rei_f" back="icon.skill0000"></td>
+<td><button width=32 height=32 action="bypass -h dressme action 9111" fore="Skins.rei2_f" back="icon.skill0000"></td>
+<td><button width=32 height=32 action="bypass -h dressme action 9112" fore="Skins.valkyri_f" back="icon.skill0000"></td>
 
-<td><button width=32 height=32 action="bypass voiced_trySkin 13" fore="Skins.anakim_f" back="icon.skill0000"></td>
-<td><button width=32 height=32 action="bypass voiced_trySkin 14" fore="Skins.pirate_f" back="icon.skill0000"></td>
-<td><button width=32 height=32 action="bypass voiced_trySkin 15" fore="Skins.pirate_blue_f" back="icon.skill0000"></td>
-<td><button width=32 height=32 action="bypass voiced_trySkin 16" fore="Skins.ninja_f" back="icon.skill0000"></td>
+<td><button width=32 height=32 action="bypass -h dressme action 9113" fore="Skins.anakim_f" back="icon.skill0000"></td>
+<td><button width=32 height=32 action="bypass -h dressme action 9114" fore="Skins.pirate_f" back="icon.skill0000"></td>
+<td><button width=32 height=32 action="bypass -h dressme action 9115" fore="Skins.pirate_blue_f" back="icon.skill0000"></td>
+<td><button width=32 height=32 action="bypass -h dressme action 9116" fore="Skins.ninja_f" back="icon.skill0000"></td>
 <tr>
 </table>
 <table width=150>
 <tr>
 
-<td><button width=32 height=32 action="bypass voiced_trySkin 17" fore="Skins.samurai_f" back="icon.skill0000"></td>
-<td><button width=32 height=32 action="bypass voiced_trySkin 18" fore="Skins.wizard_f" back="icon.skill0000"></td>
-<td><button width=32 height=32 action="bypass voiced_trySkin 19" fore="Skins.vampire_f" back="icon.skill0000"></td>
-<td><button width=32 height=32 action="bypass voiced_trySkin 25" fore="Skins.natal1_f" back="icon.skill0000"></td>
-<td><button width=32 height=32 action="bypass voiced_trySkin 26" fore="Skins.4" back="icon.skill0000"></td>
-<td><button width=32 height=32 action="bypass voiced_trySkin 27" fore="Skins.2" back="icon.skill0000"></td>
-<td><button width=32 height=32 action="bypass voiced_trySkin 28" fore="Skins.5" back="icon.skill0000"></td>
-<td><button width=32 height=32 action="bypass voiced_trySkin 20" fore="Skins.beleth_f" back="icon.skill0000"></td>
-<td><button width=32 height=32 action="bypass voiced_trySkin 24" fore="Skins.natal2_f" back="icon.skill0000"></td>
+<td><button width=32 height=32 action="bypass -h dressme action 9117" fore="Skins.samurai_f" back="icon.skill0000"></td>
+<td><button width=32 height=32 action="bypass -h dressme action 9118" fore="Skins.wizard_f" back="icon.skill0000"></td>
+<td><button width=32 height=32 action="bypass -h dressme action 9119" fore="Skins.vampire_f" back="icon.skill0000"></td>
+<td><button width=32 height=32 action="bypass -h dressme action 9120" fore="Skins.natal1_f" back="icon.skill0000"></td>
+<td><button width=32 height=32 action="bypass -h dressme action 9121" fore="Skins.4" back="icon.skill0000"></td>
+<td><button width=32 height=32 action="bypass -h dressme action 9122" fore="Skins.2" back="icon.skill0000"></td>
+<td><button width=32 height=32 action="bypass -h dressme action 9123" fore="Skins.5" back="icon.skill0000"></td>
+<td><button width=32 height=32 action="bypass -h dressme action 9124" fore="Skins.beleth_f" back="icon.skill0000"></td>
+<td><button width=32 height=32 action="bypass -h dressme action 9125" fore="Skins.natal2_f" back="icon.skill0000"></td>
 <tr>
 </table>
 
 <table width=150>
 <tr>
-<td><button width=32 height=32 action="bypass voiced_trySkin 30" fore="Skins.saint_f" back="icon.skill0000"></td>
-<td><button width=32 height=32 action="bypass voiced_trySkin 31" fore="Skins.lilith_f" back="icon.skill0000"></td>
-<td><button width=32 height=32 action="bypass voiced_trySkin 32" fore="Skins.6" back="icon.skill0000"></td>
+<td><button width=32 height=32 action="bypass -h dressme action 9126" fore="Skins.saint_f" back="icon.skill0000"></td>
+<td><button width=32 height=32 action="bypass -h dressme action 9127" fore="Skins.lilith_f" back="icon.skill0000"></td>
+<td><button width=32 height=32 action="bypass -h dressme action 9128" fore="Skins.6" back="icon.skill0000"></td>
 <tr>
 </table>
 <br><br>
@@ -86,7 +86,7 @@
 <center><table width="0">
 	<tr>
 		                             <td><img src="L2UI_CH3.shortcut_next_down" width=16 height=16></td>  
-		                             <td><button value="Disable Skin" action="bypass voiced_disable_skin" width="90" height="25" back="anim90.Anim" fore="anim90.Anim"></td>                             <td><button value="Disable Head" action="bypass voiced_disable_Helm" width="90" height="25" back="anim90.Anim" fore="anim90.Anim"></td>
+		                             <td><button value="Disable Skin" action="bypass -h dressme disable" width="90" height="25" back="anim90.Anim" fore="anim90.Anim"></td>                             <td><button value="Disable Head" action="bypass -h dressme hair_disable" width="90" height="25" back="anim90.Anim" fore="anim90.Anim"></td>
 									 <td><img src="L2UI_CH3.shortcut_prev_over" width=16 height=16></td>
 	</tr>
 </table></center>
