Update Player Shop

--- a/game/data/html/merchant/55500-5.htm
+++ b/game/data/html/merchant/55500-5.htm
@@ -10,7 +10,7 @@
 <table>
 <tr>
 <td><img src="L2UI.SquareBlank" width=5 height=2></td>
-<td><font color="LEVEL"> Player Shop - Armas </font></td>
+<td><font color="LEVEL"> Player Shop - Tattos </font></td>
 <td><img src="L2UI.SquareBlank" width=5 height=2></td>
 </tr>
 </table>
@@ -23,56 +23,36 @@
 
 <center>
 <table>
-	<tr><tr>
-		<td></td>    
-		<td><button value="[D]" action="bypass merchant action weapons D" width="90" height="25" back="anim90.Anim" fore="anim90.Anim"></td>
+	<tr>
+		<td> </td>    
+		<td><button value="[Fighter]" action="bypass merchant action tattos FIGHT" width="90" height="25" back="anim90.Anim" fore="anim90.Anim"></td>
 			<td><img src="L2UI.SquareBlank" width=5 height=2></td>
 			<td><img src="L2UI_CH3.shortcut_next_down" width=16 height=16></td>
-			<td><img src="icon.weapon_cyclone_bow_i00" width=30 height=30></td>  
+			<td><img src="icon.etc_con_symbol_i00" width=30 height=30></td>  
 		<td><img src="L2UI.SquareBlank" width=5 height=2></td>
 		<td><img src="L2UI_CH3.shortcut_prev_over" width=16 height=16></td>
 	</tr>
 	<tr><tr>
 		<td></td>    
-		<td><button value="[C]" action="bypass merchant action weapons C" width="90" height="25" back="anim90.Anim" fore="anim90.Anim"></td>
+		<td><button value="[Wizzard]" action="bypass merchant action tattos MAGE" width="90" height="25" back="anim90.Anim" fore="anim90.Anim"></td>
 			<td><img src="L2UI.SquareBlank" width=5 height=2></td>
 			<td><img src="L2UI_CH3.shortcut_next_down" width=16 height=16></td>
-			<td><img src="icon.weapon_eminence_bow_i01" width=30 height=30></td>  
+			<td><img src="icon.etc_wit_symbol_i01" width=30 height=30></td>  
+		<td><img src="L2UI.SquareBlank" width=5 height=2></td>
+		<td><img src="L2UI_CH3.shortcut_prev_over" width=16 height=16></td>
+	</tr>
+	<tr><tr>
+		<td></td>    
+		<td><button value="[AIO]" action="bypass merchant action tattos AIO" width="90" height="25" back="anim90.Anim" fore="anim90.Anim"></td>
+			<td><img src="L2UI.SquareBlank" width=5 height=2></td>
+			<td><img src="L2UI_CH3.shortcut_next_down" width=16 height=16></td>
+			<td><img src="icon.etc_dex_symbol_i00" width=30 height=30></td>  
 		<td><img src="L2UI.SquareBlank" width=5 height=2></td>
 		<td><img src="L2UI_CH3.shortcut_prev_over" width=16 height=16></td>
 	</tr><tr>	
-	<table>
-	<tr>
-		<td></td>                                                                                                             
-		<td><button value="[B]" action="bypass merchant action weapons B" width="90" height="25" back="anim90.Anim" fore="anim90.Anim"></td>
-			<td><img src="L2UI.SquareBlank" width=5 height=2></td>
-			<td><img src="L2UI_CH3.shortcut_next_down" width=16 height=16></td>
-			<td><img src="icon.weapon_dark_elven_long_bow_i01" width=30 height=30></td> 
-		<td><img src="L2UI.SquareBlank" width=5 height=2></td>
-		<td><img src="L2UI_CH3.shortcut_prev_over" width=16 height=16></td>
-		<center>
-	</table>
-	<table>
-	<tr>
-		<td></td>                                                                                                             
-		<td><button value="[A]" action="bypass merchant action weapons A" width="90" height="25" back="anim90.Anim" fore="anim90.Anim"></td>
-			<td><img src="L2UI.SquareBlank" width=5 height=2></td>
-			<td><img src="L2UI_CH3.shortcut_next_down" width=16 height=16></td>
-			<td><img src="icon.weapon_soul_bow_i01" width=30 height=30></td> 
-		<td><img src="L2UI.SquareBlank" width=5 height=2></td>
-		<td><img src="L2UI_CH3.shortcut_prev_over" width=16 height=16></td>
-		<center>
-	</table>
-	<table>
-	<tr>
-		<td></td>                                                                                                             
-		<td><button value="[S]" action="bypass merchant action weapons S" width="90" height="25" back="anim90.Anim" fore="anim90.Anim"></td>
-			<td><img src="L2UI.SquareBlank" width=5 height=2></td>
-			<td><img src="L2UI_CH3.shortcut_next_down" width=16 height=16></td>
-			<td><img src="icon.weapon_shining_bow_i01" width=30 height=30></td> 
-		<td><img src="L2UI.SquareBlank" width=5 height=2></td>
-		<td><img src="L2UI_CH3.shortcut_prev_over" width=16 height=16></td>
-		<center>
+ 
+ 
+	 
 	</table>
 </center>
  <br>
