--- a/game/data/html/merchant/55500.htm
+++ b/game/data/html/merchant/55500.htm
@@ -1,7 +1,7 @@
 <html>
 <title>LineageII Merchant</title>
 <body>
-<center><img src="exclusive.EventFestivalWnd_HeaderImg" width=256 height=64></center>
+<center><img src="exclusive.EventFestivalWnd_HeaderImg" width=256 height=48></center>
 <center><img src=L2UI.SquareGray width=300 height=1></center>
 <td><img src="L2UI.SquareBlank" width=40 height=2></td>
 <center><img src="L2UI.SquareGray" width=280 height=1></center>
@@ -87,15 +87,22 @@
 <table>
 	<tr>
 		<td><img src="icon.etc_spirit_bullet_gold_i00" width=30 height=30></td>                                                                                                             
-		<td><button value="[SS] Shots" action="bypass npc_%objectId%_Multisell consumables" width="90" height="25" back="anim90.Anim" fore="anim90.Anim"></td>	<td><button value="Symbols" action="bypass npc_%objectId%_Multisell 2-dyes" width="90" height="25" back="anim90.Anim" fore="anim90.Anim"></td>
+		<td><button value="[SS] Shots" action="bypass merchant action shots S" width="90" height="25" back="anim90.Anim" fore="anim90.Anim"></td>	<td><button value="Symbols" action="bypass merchant action symbols NG" width="90" height="25" back="anim90.Anim" fore="anim90.Anim"></td>
 		<td><img src="icon.etc_wit_hena_i01" width=30 height=30></td>         
 	</tr>
 	<tr>
-	<tr>
+	</tr>
 	<tr>
          <td><img src="icon.weapon_voodoo_doll_i00" width=30 height=30></td> 									 
-		 <td><button value="Tattoo" action="bypass npc_%objectId%_Multisell tattoo" width="90" height="25" back="anim90.Anim" fore="anim90.Anim"></td>	<td><button value="Trocas" action="bypass npc_%objectId%_Multisell moedaadm" width="90" height="25" back="anim90.Anim" fore="anim90.Anim"></td>	
-		 <td><img src="icon.item_normal03" width=32 height=32></td>  
+		 <td><button value="Tattoo" action="bypass merchant chat 55500-5" width="90" height="25" back="anim90.Anim" fore="anim90.Anim"></td>	<td><button value="Trocas" action="bypass merchant action trocas NG" width="90" height="25" back="anim90.Anim" fore="anim90.Anim"></td>	
+		 <td><img src="icon.etc_ancient_adena_i00" width=32 height=32></td>  
+	</tr>
+	<tr>
+	</tr>
+	<tr>
+         <td><img height=5></td> 									 
+		 <td><button value="Scroll" action="bypass merchant action scrolls ALL" width="90" height="25" back="anim90.Anim" fore="anim90.Anim"></td>	<td><button value="Quest" action="bypass merchant action quests PORTAL" width="90" height="25" back="anim90.Anim" fore="anim90.Anim"></td>	
+		 <td><img height=5></td>  
 	</tr>
 	
 </table>
