--- a/game/data/html/merchant/55500.htm
+++ b/game/data/html/merchant/55500.htm
@@ -28,7 +28,7 @@
 		<td><button value="Armas" action="bypass merchant chat 55500-1" width="90" height="25" back="anim90.Anim" fore="anim90.Anim"></td>
 			<td><img src="L2UI.SquareBlank" width=5 height=2></td>
 			<td><img src="L2UI_CH3.shortcut_next_down" width=16 height=16></td>
-			<td><img src="icon.weapon_draconic_bow_i01" width=30 height=30></td>  
+			<td><img src="icon.weapon_draconic_bow_i01" width=32 height=32></td>  
 		<td><img src="L2UI.SquareBlank" width=5 height=2></td>
 		<td><img src="L2UI_CH3.shortcut_prev_over" width=16 height=16></td>
 	</tr>
@@ -37,7 +37,7 @@
 		<td><button value="Roupas" action="bypass merchant chat 55500-2" width="90" height="25" back="anim90.Anim" fore="anim90.Anim"></td>
 			<td><img src="L2UI.SquareBlank" width=5 height=2></td>
 			<td><img src="L2UI_CH3.shortcut_next_down" width=16 height=16></td>
-			<td><img src="icon.armor_t89_ul_i00" width=30 height=30></td>  
+			<td><img src="icon.armor_t89_ul_i00" width=32 height=32></td>  
 		<td><img src="L2UI.SquareBlank" width=5 height=2></td>
 		<td><img src="L2UI_CH3.shortcut_prev_over" width=16 height=16></td>
 	</tr>
@@ -46,7 +46,7 @@
 		<td><button value="Joias" action="bypass merchant chat 55500-3" width="90" height="25" back="anim90.Anim" fore="anim90.Anim"></td>
 			<td><img src="L2UI.SquareBlank" width=5 height=2></td>
 			<td><img src="L2UI_CH3.shortcut_next_down" width=16 height=16></td>
-			<td><img src="icon.accessory_ring_of_baium_i00" width=30 height=30></td>  
+			<td><img src="icon.accessory_ring_of_baium_i00" width=32 height=32></td>  
 		<td><img src="L2UI.SquareBlank" width=5 height=2></td>
 		<td><img src="L2UI_CH3.shortcut_prev_over" width=16 height=16></td>
 	</tr><tr>	
@@ -56,7 +56,7 @@
 		<td><button value="Acessorios" action="bypass merchant chat 55500-4" width="90" height="25" back="anim90.Anim" fore="anim90.Anim"></td>
 			<td><img src="L2UI.SquareBlank" width=5 height=2></td>
 			<td><img src="L2UI_CH3.shortcut_next_down" width=16 height=16></td>
-			<td><img src="icon.accessory_worldcup_mask_i00" width=30 height=30></td> 
+			<td><img src="icon.accessory_worldcup_mask_i00" width=32 height=32></td> 
 		<td><img src="L2UI.SquareBlank" width=5 height=2></td>
 		<td><img src="L2UI_CH3.shortcut_prev_over" width=16 height=16></td>
 		<center>
@@ -86,14 +86,14 @@
 <center>
 <table>
 	<tr>
-		<td><img src="icon.etc_spirit_bullet_gold_i00" width=30 height=30></td>                                                                                                             
+		<td><img src="icon.etc_spirit_bullet_gold_i00" width=32 height=32></td>                                                                                                             
 		<td><button value="[SS] Shots" action="bypass merchant action shots S" width="90" height="25" back="anim90.Anim" fore="anim90.Anim"></td>	<td><button value="Symbols" action="bypass merchant action symbols NG" width="90" height="25" back="anim90.Anim" fore="anim90.Anim"></td>
-		<td><img src="icon.etc_wit_hena_i01" width=30 height=30></td>         
+		<td><img src="icon.etc_wit_hena_i01" width=32 height=32></td>         
 	</tr>
 	<tr>
 	</tr>
 	<tr>
-         <td><img src="icon.weapon_voodoo_doll_i00" width=30 height=30></td> 									 
+         <td><img src="icon.etc_dex_symbol_i00" width=32 height=32></td> 									 
 		 <td><button value="Tattoo" action="bypass merchant chat 55500-5" width="90" height="25" back="anim90.Anim" fore="anim90.Anim"></td>	<td><button value="Trocas" action="bypass merchant action trocas NG" width="90" height="25" back="anim90.Anim" fore="anim90.Anim"></td>	
 		 <td><img src="icon.etc_ancient_adena_i00" width=32 height=32></td>  
 	</tr>
